<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ContactProviderActivity!</string>
    <string name="app_name">ContactProvider</string>
    <string name="username">姓名</string>
    <string name="user_hint">请输入姓名</string>
    <string name="user_notes_hint">请输入备注</string>
    <string name="user_notes">备注</string>
    <string name="btn_adduser_tag">添加</string>
</resources>
