<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/username"
    />

<EditText 
	android:id="@+id/username"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:hint="@string/user_hint"/>
<TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content" 
    android:text="@string/user_notes"
    />

<EditText 
	android:id="@+id/user_notes"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:hint="@string/user_notes_hint"/>
<Button 
	android:id="@+id/btnAddUser"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/btn_adduser_tag"/>

</LinearLayout>
